fix: align chat center

--- a/src/components/Chat/ChatComponent.scss
+++ b/src/components/Chat/ChatComponent.scss
@@ -29,17 +29,20 @@
 
     .chat-message-wrapper {
       display: flex;
-      align-items: flex-start;
+      align-items: center; 
+      justify-content: center; 
       margin-bottom: 10px;
       max-width: 80%;
-
+      margin-left: auto; 
+      margin-right: auto; 
+    
       &.user {
         justify-content: flex-end;
         .chat-message {
           margin-left: 10px;
         }
       }
-
+    
       &.bot {
         justify-content: flex-start;
         .chat-message {
